--- a/views/users/otp.ejs
+++ b/views/users/otp.ejs
@@ -1,5 +1,5 @@
- <!-- <!DOCTYPE html>
-<html lang="en"> -->
+ <!DOCTYPE html>
+<html lang="en">
 
 <head>
  <meta charset="UTF-8">
@@ -78,7 +78,7 @@
 <body>
  <div id="otp-container">
    <h2>Secure OTP Verification</h2>
-   <form id="otp-form" method="post" onsubmit="return validateForm()">
+   <form id="otp-form"  method="post" action="/otp" >
      <input name="otp" type="text" id="otp-input" placeholder="Enter OTP"  maxlength="6" required>
      <br>
      <button type="submit" id="submit-btn">Verify OTP</button>
@@ -89,7 +89,7 @@
  </div>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
-    <script>
+ <script>
     let timerSeconds = 60; 
     let resendTimerSeconds = 30;
     let timerInterval;
@@ -207,33 +207,36 @@
         }, 1000);
     }
 
-    function verifyOTP(otp) {
-        fetch('/verifyOTP', {
-            method: 'POST',
-            headers: {
-                'Content-Type': 'application/json'
-            },
-            body: JSON.stringify({ enteredOtp: otp })
-        })
-        .then(response => {
-            if (!response.ok) {
-                throw new Error('Network response was not ok');
-            }
-            return response.json();
-        })
-        .then(data => {
-            if (!data.error) {
-                window.location.href = '/login';
-            }
-        })
-        .catch(error => {
-            console.error('Error:', error);
-            document.getElementById('error-message').textContent = 'Enter valid OTP.';
-        });
-    }
+    // function verifyOTP(otp) {
+    //     fetch('/verifyOTP', {
+    //         method: 'POST',
+    //         headers: {
+    //             'Content-Type': 'application/json'
+    //         },
+    //         body: JSON.stringify({ enteredOtp: otp })
+    //     })
+    //     .then(response => {
+    //         console.log(response);
+    //         if (!response.ok) {
+    //             throw new Error('Network response was not ok');
+    //         }
+    //         // return response.json();
+    //         window.location.href = '/login';
+    //     })
+    //     .then(data => {
+    //         console.log('data', data)
+    //         if (!data.error) {
+    //             window.location.href = '/login';
+    //         }
+    //     })
+    //     .catch(error => {
+    //         console.error('Error:', error);
+    //         document.getElementById('error-message').textContent = 'Enter valid OTP.';
+    //     });
+    // }
 
     startTimer();
 
-</script>
+</script> 
 </body>
 </html>
