--- a/views/users/shop.ejs
+++ b/views/users/shop.ejs
@@ -105,7 +105,7 @@
               <div class="product-cart-wrap mb-30">
                 <div class="product-img-action-wrap">
                   <div class="product-img product-img-zoom">
-                    <a href="/shop-detail">
+                    <a href="/shop-detail/<%= product.id %>">
                       <img
                         src="/Productimages/<%= product.media[0] %>"
                         alt="<%= product.name %>"
