--- a/views/users/shopdetail.ejs
+++ b/views/users/shopdetail.ejs
@@ -1,117 +1,118 @@
 <%- include('../partials/header') %>
 <%- include('../partials/headercopy') %>
 
-   
 
-    <main class="main">
-        <div class="page-header breadcrumb-wrap">
-            <div class="container">
-                <div class="breadcrumb">
-                    <a href="/" rel="nofollow">Home</a>
-                    <span></span> Shop
-                    <span></span> Headsets
-                </div>
+
+<main class="main">
+    <div class="page-header breadcrumb-wrap">
+        <div class="container">
+            <div class="breadcrumb">
+                <a href="/" rel="nofollow">Home</a>
+                <span></span> Shop
+                <span></span> Headsets
             </div>
         </div>
-        <section class="mt-50 mb-50">
-          <div class="container">
-            <div class="row">
-              <div class="col-lg-9">
-                <div class="product-detail accordion-detail">
-                  <div class="row mb-50">
-                    <div class="col-md-6 col-sm-12 col-xs-12">
-                      <div class="detail-gallery">
-                        <span class="zoom-icon"><i class="fi-rs-search"></i></span>
-                        <!-- MAIN SLIDES -->
-                        <div class="product-image-slider">
-                          <% product.media.forEach(image => { %>
-                            <figure class="border-radius-10">
-                              <img src="/Productimages/<%= image %>" alt="product image">
-                            </figure>
-                          <% }); %>
-                        </div>
-                        <!-- THUMBNAILS -->
-                        <div class="slider-nav-thumbnails pl-15 pr-15">
-                          <% product.media.forEach((image, index) => { %>
-                            <div><img src="/Productimages/<%= image %>" alt="product image"></div>
-                          <% }); %>
-                        </div>
+    </div>
+    <section class="mt-50 mb-50">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-9">
+            <div class="product-detail accordion-detail">
+              <div class="row mb-50">
+                <div class="col-md-6 col-sm-12 col-xs-12">
+                  <div class="detail-gallery">
+                    <span class="zoom-icon"><i class="fi-rs-search"></i></span>
+                    <!-- MAIN SLIDES -->
+                    <div class="product-image-slider">
+                      <% product.media.forEach(image => { %>
+                        <figure class="border-radius-10">
+                          <img src="/Productimages/<%= image %>" alt="product image">
+                        </figure>
+                      <% }); %>
+                    </div>
+                    <!-- THUMBNAILS -->
+                    <div class="slider-nav-thumbnails pl-15 pr-15">
+                      <% product.media.forEach((image, index) => { %>
+                        <div><img src="/Productimages/<%= image %>" alt="product image"></div>
+                      <% }); %>
+                    </div>
+                  </div>
+                  <!-- End Gallery -->
+                  <!-- <div class="social-icons single-share">
+                    <ul class="text-grey-5 d-inline-block">
+                      <li><strong class="mr-10">Share this:</strong></li>
+                      <li class="social-facebook"><a href="#"><img src="Userassets/imgs/theme/icons/icon-facebook.svg" alt=""></a></li>
+                      <li class="social-twitter"> <a href="#"><img src="Userassets/imgs/theme/icons/icon-twitter.svg" alt=""></a></li>
+                      <li class="social-instagram"><a href="#"><img src="Userassets/imgs/theme/icons/icon-instagram.svg" alt=""></a></li>
+                      <li class="social-linkedin"><a href="#"><img src="Userassets/imgs/theme/icons/icon-pinterest.svg" alt=""></a></li>
+                    </ul>
+                  </div> -->
+                </div>
+                <div class="col-md-6 col-sm-12 col-xs-12">
+                  <div class="detail-info">
+                    <h2 class="title-detail"><%= product.name %></h2>
+                    <div class="product-detail-rating">
+                      <div class="pro-details-brand">
+                        <!-- <span> Brands: <a href="shop-grid-right.html">Bootstrap</a></span> -->
                       </div>
-                      <!-- End Gallery -->
-                      <div class="social-icons single-share">
-                        <ul class="text-grey-5 d-inline-block">
-                          <li><strong class="mr-10">Share this:</strong></li>
-                          <li class="social-facebook"><a href="#"><img src="Userassets/imgs/theme/icons/icon-facebook.svg" alt=""></a></li>
-                          <li class="social-twitter"> <a href="#"><img src="Userassets/imgs/theme/icons/icon-twitter.svg" alt=""></a></li>
-                          <li class="social-instagram"><a href="#"><img src="Userassets/imgs/theme/icons/icon-instagram.svg" alt=""></a></li>
-                          <li class="social-linkedin"><a href="#"><img src="Userassets/imgs/theme/icons/icon-pinterest.svg" alt=""></a></li>
-                        </ul>
+                      <div class="product-rate-cover text-end">
+                        <div class="product-rate d-inline-block">
+                          <div class="product-rating" style="width:<%= product.rating %>%">
+                          </div>
+                        </div>
+                        <span class="font-small ml-5 text-muted"> (<%= product.reviews %> reviews)</span>
                       </div>
                     </div>
-                    <div class="col-md-6 col-sm-12 col-xs-12">
-                      <div class="detail-info">
-                        <h2 class="title-detail"><%= product.name %></h2>
-                        <div class="product-detail-rating">
-                          <div class="pro-details-brand">
-                            <span> Brands: <a href="shop-grid-right.html">Bootstrap</a></span>
-                          </div>
-                          <div class="product-rate-cover text-end">
-                            <div class="product-rate d-inline-block">
-                              <div class="product-rating" style="width:<%= product.rating %>%">
-                              </div>
-                            </div>
-                            <span class="font-small ml-5 text-muted"> (<%= product.reviews %> reviews)</span>
-                          </div>
-                        </div>
-                        <div class="clearfix product-price-cover">
-                          <div class="product-price primary-color float-left">
-                            <ins><span class="text-brand"><%= product.price %></span></ins>
-                            <% if (product.oldPrice) { %>
-                              <ins><span class="old-price font-md ml-15"><%= product.oldPrice %></span></ins>
-                            <% } %>
-                            <% if (product.discount) { %>
-                              <span class="save-price  font-md color3 ml-15"><%= product.discount %>% Off</span>
-                            <% } %>
-                          </div>
-                        </div>
-                        <div class="bt-1 border-color-1 mt-15 mb-15"></div>
-                        <div class="short-desc mb-30">
-                          <p><%= product.description %></p>
-                        </div>
-                       
-                      
-                        <div class="bt-1 border-color-1 mt-30 mb-30"></div>
-                        <div class="detail-extralink">
-                          <div class="detail-qty border radius">
-                            <a href="#" class="qty-down"><i class="fi-rs-angle-small-down"></i></a>
-                            <span class="qty-val">1</span>
-                            <a href="#" class="qty-up"><i class="fi-rs-angle-small-up"></i></a>
-                          </div>
-                          <div class="product-extra-link2">
-                            <button type="submit" class="button button-add-to-cart">Add to cart</button>
-                            <a aria-label="Add To Wishlist" class="action-btn hover-up" href="shop-wishlist.html"><i class="fi-rs-heart"></i></a>
-                            <a aria-label="Compare" class="action-btn hover-up" href="shop-compare.html"><i class="fi-rs-shuffle"></i></a>
-                          </div>
-                        </div>
-                        <div class="product-share mt-40">
-                          <strong class="mr-10">Share</strong>
-                          <ul class="product-share-icon">
-                            <li><a href="#"><i class="fi-rs-facebook"></i></a></li>
-                            <li><a href="#"><i class="fi-rs-twitter"></i></a></li>
-                            <li><a href="#"><i class="fi-rs-google-plus"></i></a></li>
-                            <li><a href="#"><i class="fi-rs-pinterest"></i></a></li>
-                            <li><a href="#"><i class="fi-rs-linkedin"></i></a></li>
-                          </ul>
-                        </div>
+                    <div class="clearfix product-price-cover">
+                      <div class="product-price primary-color float-left">
+                        <ins><span class="text-brand"><%= product.price %></span></ins>
+                        <% if (product.oldPrice) { %>
+                          <ins><span class="old-price font-md ml-15"><%= product.oldPrice %></span></ins>
+                        <% } %>
+                        <% if (product.discount) { %>
+                          <span class="save-price  font-md color3 ml-15"><%= product.discount %>% Off</span>
+                        <% } %>
                       </div>
+                    </div>
+                    <div class="bt-1 border-color-1 mt-15 mb-15"></div>
+                    <div class="short-desc mb-30">
+                      <p><%= product.description %></p>
+                    </div>
+                   
+                  
+                    <div class="bt-1 border-color-1 mt-30 mb-30"></div>
+                    <div class="detail-extralink">
+                      <div class="detail-qty border radius">
+                        <a href="#" class="qty-down"><i class="fi-rs-angle-small-down"></i></a>
+                        <span class="qty-val">1</span>
+                        <a href="#" class="qty-up"><i class="fi-rs-angle-small-up"></i></a>
+                      </div>
+                      <div class="product-extra-link2">
+                        <button type="submit" class="button button-add-to-cart">Add to cart</button>
+                        <a aria-label="Add To Wishlist" class="action-btn hover-up" href="shop-wishlist.html"><i class="fi-rs-heart"></i></a>
+                        <a aria-label="Compare" class="action-btn hover-up" href="shop-compare.html"><i class="fi-rs-shuffle"></i></a>
+                      </div>
+                    </div>
+                    <div class="product-share mt-40">
+                      <!-- <strong class="mr-10">Share</strong> -->
+                      <!-- <ul class="product-share-icon">
+                        <li><a href="#"><i class="fi-rs-facebook"></i></a></li>
+                        <li><a href="#"><i class="fi-rs-twitter"></i></a></li>
+                        <li><a href="#"><i class="fi-rs-google-plus"></i></a></li>
+                        <li><a href="#"><i class="fi-rs-pinterest"></i></a></li>
+                        <li><a href="#"><i class="fi-rs-linkedin"></i></a></li>
+                      </ul> -->
                     </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-        </section>
-    </main>
-   
-<%- include('../partials/footercopy') %>
-<%- include('../partials/footer') %>
+        </div>
+      </div>
+    </section>
+</main>
+  
+
+    <%- include('../partials/footercopy') %>
+    <%- include('../partials/footer') %>
